# datawarrior_conformer_filter

./: README.md  README.org  best_conformer.awk  best_conformer.py  pyproject.toml
docs/: Random_Molecules.dwar  conformers.txt
src/datawarrior_conformer_filter/: __init__.py  best_conformer.py
test_data/: 10mol.dwar  10mol_conf.dwar  10mol_conf.txt  conformers.dwar  conformers_out.dwar
tests/: conformers.dwar  conformers.txt  results.txt
