[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datawarrior_conformer_filter"
version = "0.1.0"
requires-python = ">=3.10"
authors = [
    { name="Norwid Behrnd", email="nbehrnd@yahoo.com" }
]
description = "report .dwar conformer of lowest energy"
readme = "README.md"

license-files = ["LICENSE"]
keywords = ["datawarrior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

dependencies = []  # None (it works with Python's standard library alone)

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit"
]

[project.urls]
Homepage = "https://github.com/nbehrnd/datawarrior_conformer_filter"

[project.scripts]
best_conformer = "datawarrior_conformer_filter.best_conformer:main"
